--- a/wede5020_calaislloyd_ST10108322_POEpt1/public_html/style.css
+++ b/wede5020_calaislloyd_ST10108322_POEpt1/public_html/style.css
@@ -123,8 +123,6 @@ nav .fa-xmark, nav .fa-bars{
     .nav-links ul{
         padding: 30px;
     }
-}.fa-solid {
-
 }
 
 /*-----about us-----*/
@@ -148,7 +146,7 @@ p{
     color: #000000;
     font-size: 14px;
     font-weight: 300;
-    line-weight: 22px;
+    /* line-weight: 22px; */
     padding: 10px;      
 }
 *
@@ -227,10 +225,10 @@ form
     width: 100%;
     text-align: center;
 }
-h1{
+h1 {
     font-weight: normal;
     font-size: 35px;
-    font-position: relative;
+    /* font-position: relative; */
     margin: 40px 0;
 }
 .photogallery{
@@ -252,8 +250,9 @@ h1{
     height: 100%;
     border-radius: 10px;
 }
-@media only screen and (max-width: 769px){
-    .container{
-     grid-direction: column;
-}
+@media only screen and (max-width: 769px) {
+    .container {
+        display: flex;        
+        flex-direction: column;
+    }
 }
